Incorrect position: fixed; rendering when child of position:relative/sticky. https://bugs.webkit.org/show_bug.cgi?id=147284

Reviewed by Simon Fraser and David Hyatt.

Computing logical left for positioned objects should take the relative positioned ancestors' offset
into account.

Source/WebCore:

Tests: fast/block/positioning/fixed-container-with-relative-parent.html
       fast/block/positioning/fixed-container-with-sticky-parent.html

* rendering/RenderBox.cpp:
(WebCore::computeInlineStaticDistance):

LayoutTests:

* fast/block/positioning/fixed-container-with-relative-parent-expected.html: Added.
* fast/block/positioning/fixed-container-with-relative-parent.html: Added.
* fast/block/positioning/fixed-container-with-sticky-parent-expected.html: Added.
* fast/block/positioning/fixed-container-with-sticky-parent.html: Added.


Canonical link: https://commits.webkit.org/170930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194710 268f45cc-cd09-0410-ab3c-d52691b4dbfc